welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:2: error: not found: value vuBiscuit
	if (vuBiscuit()==true) {return false}
            ^Program:2: error: type mismatch;
 found   : Unit
 required: Boolean
	if (vuBiscuit()==true) {return false}
        ^